compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_b16_int.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
IntExpr@0..4
  IntExpr@0..4 "0xff"
