compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_b16_int_neg_sep.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
PrefixExpr@0..9
  Minus@0..1 "-"
  IntExpr@1..9
    IntExpr@1..9 "0xa_b_ff"
