compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_b16_int_sep.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
IntExpr@0..8
  IntExpr@0..8 "0xa_b_ff"
