compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_b2_int_neg.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
PrefixExpr@0..10
  Minus@0..1 "-"
  IntExpr@1..10
    IntExpr@1..10 "0b1010001"
